--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.appstronautstudios.repeatingalarmmanagerdemo.MainActivity">
+    tools:context=".MainActivity">
 
     <ListView
-        android:id="@+id/alarms"
+        android:id="@+id/alarm_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginTop="@dimen/item_margin_double"
+        android:layout_marginRight="@dimen/item_margin"
+        android:layout_marginBottom="@dimen/item_margin"
+        android:src="@android:drawable/ic_lock_idle_alarm"
+        app:tint="@android:color/white"
+        app:backgroundTint="?colorPrimary" />
+</FrameLayout>
