--- a/app/src/main/res/layout/activity_create_alarm.xml
+++ b/app/src/main/res/layout/activity_create_alarm.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <TextView
         fontPath="Oswald-Regular.ttf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/item_margin"
         android:layout_marginTop="@dimen/item_margin"
+        android:padding="@dimen/item_margin"
         android:text="Notification Details"
         android:textAllCaps="true" />
 
@@ -19,26 +19,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/item_margin"
-        android:padding="@dimen/item_margin"
-        android:hint="Notification Name"/>
+        android:hint="Notification Name"
+        android:padding="@dimen/item_margin" />
 
     <EditText
         android:id="@+id/alarm_desc_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/item_margin"
-        android:padding="@dimen/item_margin"
+        android:hint="Notification Description"
         android:inputType="text|textCapSentences"
-        android:scrollbars="vertical"
         android:minLines="3"
-        android:hint="Notification Description"/>
+        android:padding="@dimen/item_margin"
+        android:scrollbars="vertical" />
 
     <TextView
         fontPath="Oswald-Regular.ttf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/item_margin"
         android:layout_marginTop="@dimen/item_margin"
+        android:padding="@dimen/item_margin"
         android:text="Notification Start Date"
         android:textAllCaps="true" />
 
@@ -71,8 +71,8 @@
         fontPath="Oswald-Regular.ttf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/item_margin"
         android:layout_marginTop="@dimen/item_margin"
+        android:padding="@dimen/item_margin"
         android:text="Repeat Interval"
         android:textAllCaps="true" />
 
@@ -85,6 +85,14 @@
         app:sc_border_width="2dp"
         app:sc_corner_radius="0dp"
         app:sc_tint_color_unselected="@color/grey_light">
+
+        <RadioButton
+            android:id="@+id/fifteen_mins"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:minHeight="0dp"
+            android:text="15m" />
 
         <RadioButton
             android:id="@+id/half_day"
